preview-knoq/staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knoq-ui-staging

spec:
  type: ClusterIP
  selector:
    app: knoq-ui-staging
  ports:
    - port: 80
      targetPort: http
      name: http
