preview-knoq/staging-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knoq-preview-staging

spec:
  entryPoints:
    - websecure
  tls:
    secretName: preview-knoq-tls
  routes:
    - kind: Rule
      match: Host(`staging-prod.knoq-preview.trapti.tech`)
      priority: -100
      middlewares:
        - name: sablier-staging
          namespace: preview-knoq
      services:
        - namespace: preview-knoq
          kind: Service
          name: knoq-ui-staging
          port: http
          scheme: http
          weight: 1
    - kind: Rule
      match: Host(`staging-prod.knoq-preview.trapti.tech`) && PathPrefix(`/api`)
      priority: -99
      middlewares:
        - name: sablier-staging
          namespace: preview-knoq
      services:
        - kind: TraefikService
          name: knoq-prod@file

    - kind: Rule
      match: Host(`staging-dev.knoq-preview.trapti.tech`)
      priority: -100
      middlewares:
        - name: sablier-staging
          namespace: preview-knoq
      services:
        - namespace: preview-knoq
          kind: Service
          name: knoq-ui-staging
          port: http
          scheme: http
          weight: 1
    - kind: Rule
      match: Host(`staging-dev.knoq-preview.trapti.tech`) && PathPrefix(`/api`)
      priority: -99
      middlewares:
        - name: sablier-staging
          namespace: preview-knoq
      services:
        - kind: TraefikService
          name: knoq-dev@file
